Added Level 2: MD5 Hash Cracking

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
             <li>
                 <a href="levels/level1.html">Caesar Cipher</a>
             </li>
+            <li>
+                <a href="levels/level2.html">Hash Cracking</a>
+            </li>
         </ul>
     </div>
     
