--- a/levels/level1.html
+++ b/levels/level1.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Level 1 - Caesar Cipher</title>
     <link rel="stylesheet" href="../style.css">
+
 </head>
 <body>
     <div class="container">
@@ -32,7 +33,9 @@
         <audio id="failSound" src="../Assets/Sounds/wrong-answer.wav"></audio>
 
         <!-- Next Level button (hidden by default) -->
+        <p id="feedback"></p>
         <button id="nextLevelBtn" onclick="goToNextLevel()" style="display: none;">Next Level</button>
+
     </div>
 
          <a href="../index.html">Back to Main Menu</a>
@@ -75,28 +78,20 @@
         const resultDisplay = document.getElementById("checkResult");
         const successSound = document.getElementById("successSound");
         const failSound = document.getElementById("failSound");
-        const nextBtn = document.getElementById("nextLevelBtn");
+        const feedback = document.getElementById("feedback");
 
         // Compare normalized strings
         if (userAnswer === correct) {
             resultDisplay.textContent = "✅ Correct!";
             resultDisplay.style.color = "lightgreen";
             successSound.play();
-
-            // Trigger confetti 🎉
-            confetti({
-                particleCount: 150,
-                spread: 90,
-                origin: { y: 0.6 }
-            });
-
             // Show the next level button
-            nextBtn.style.display = "inline-block";
+            document.getElementById("nextLevelBtn").style.display = "inline-block";
         } else {
             resultDisplay.textContent = "❌ Try again.";
             resultDisplay.style.color = "red";
             failSound.play();
-            nextBtn.style.display = "none";
+            document.getElementById("nextLevelBtn").style.display = "none";
         }
     }
 
