Add Level 3: Brute Force

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
             <li>
                 <a href="levels/level2.html">Hash Cracking</a>
             </li>
+            <li>
+                <a href="levels/level3.html">Brute Force</a>
+            </li>
         </ul>
     </div>
     
