Modified Level 3: SQL Injection

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
                 <a href="levels/level2.html">Hash Cracking</a>
             </li>
             <li>
-                <a href="levels/level3.html">Brute Force</a>
+                <a href="levels/level3.html">SQL Injection</a>
+            </li>
+            <li>
+                <a href="levels/level4.html">Brute Force</a>
             </li>
         </ul>
     </div>
